--- a/src/Prototype.Ps.Tests/Prototype.Ps.Tests.csproj
+++ b/src/Prototype.Ps.Tests/Prototype.Ps.Tests.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\Prototype.Ps\packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,13 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MethodHolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PrototypalObjectTests.cs" />
+    <Compile Include="PrototypalObjectTestsDefinedMethods.cs" />
+    <Compile Include="PrototypalObjectTestsNestedPrototypeWithMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Prototype.Ps\Prototype.Ps.csproj">
       <Project>{74aaf77c-a943-489a-a78c-3612fa2cc938}</Project>
       <Name>Prototype.Ps</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
