Implementing proper inheritance hierarchy for prototypal expression resolution. Adding tests. Added failing tests for ExpandoObject and hash based prototypes.

--- a/src/Prototype.Ps/Prototype.Ps.csproj
+++ b/src/Prototype.Ps/Prototype.Ps.csproj
@@ -35,9 +35,10 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\functions\Prototype.cs">
+      <Link>Prototype.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PrototypalMetaObject.cs" />
-    <Compile Include="PrototypalObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
