--- a/src/Prototype.Ps.Tests/Prototype.Ps.Tests.csproj
+++ b/src/Prototype.Ps.Tests/Prototype.Ps.Tests.csproj
@@ -42,11 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MethodHolder.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="PrototypalObjectTestsExpandoObjectPrototypes.cs" />
+    <Compile Include="StaticTests\StaticMethodTests.cs" />
+    <Compile Include="StaticTests\StaticMethodsOnDynamicObjectPrototypeTests.cs" />
+    <Compile Include="StaticTests\StaticMethodsOnObjectPrototypeTests.cs" />
+    <Compile Include="TestObjects\MethodTestObjects.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PrototypalObjectTests.cs" />
-    <Compile Include="PrototypalObjectTestsDefinedMethods.cs" />
-    <Compile Include="PrototypalObjectTestsNestedPrototypeWithMethods.cs" />
+    <Compile Include="MethodTests\PrototypalObjectTestsDefinedMethods.cs" />
+    <Compile Include="MethodTests\NestedPrototypeWithMethods.cs" />
+    <Compile Include="PrototypalObjectTestsNotImplementedCalls.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Prototype.Ps\Prototype.Ps.csproj">
@@ -56,6 +62,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="OverrideTests\" />
+    <Folder Include="PropertyTests\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
