Refactoring out core needed for delegation. PrototypalObject now derives from DelegatingPrototype.

--- a/src/Archetype/Archetype.csproj
+++ b/src/Archetype/Archetype.csproj
@@ -35,8 +35,9 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DelegatingPrototype.cs" />
     <Compile Include="PrototypalMetaObject.cs" />
-    <Compile Include="Prototype.cs" />
+    <Compile Include="PrototypalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
