Adding IPrototypalMetaObjectProvider so that PrototypalMetaObject no longer depends on the concrete DelegatingPrototype class.

--- a/src/Archetype/Archetype.csproj
+++ b/src/Archetype/Archetype.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DelegatingPrototype.cs" />
+    <Compile Include="IPrototypalMetaObjectProvider.cs" />
     <Compile Include="PrototypalMetaObject.cs" />
     <Compile Include="PrototypalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
