--- a/src/Archetype.Tests/Archetype.Tests.csproj
+++ b/src/Archetype.Tests/Archetype.Tests.csproj
@@ -30,9 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.6.1.12217, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\lib\NUnit\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -40,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="ModuleTestsForGetMember.cs" />
     <Compile Include="PrototypalObjectTestsExpandoObjectPrototypes.cs" />
     <Compile Include="PrototypalObjectTestsInheritanceOrder.cs" />
     <Compile Include="StaticTests\StaticMethodTests.cs" />
@@ -64,9 +64,6 @@
   <ItemGroup>
     <Folder Include="OverrideTests\" />
     <Folder Include="PropertyTests\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
