Adding NotifyPropertyChangedModule implementation and tests. Updating readme with help to pull dependencies and build.

--- a/src/Archetype.Tests/Archetype.Tests.csproj
+++ b/src/Archetype.Tests/Archetype.Tests.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="ModuleTestsForGetMember.cs" />
+    <Compile Include="NotifyPropertyChangesModuleTests.cs" />
     <Compile Include="PrototypalObjectTestsExpandoObjectPrototypes.cs" />
     <Compile Include="PrototypalObjectTestsInheritanceOrder.cs" />
     <Compile Include="StaticTests\StaticMethodTests.cs" />
