All tests now pass, but I have to use an empty catch block. This is a temporary hack until I can figure out how to get around this binding issue.

--- a/src/Archetype.Tests/Archetype.Tests.csproj
+++ b/src/Archetype.Tests/Archetype.Tests.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,6 +39,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CastingTests.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ModuleTestsForGetMember.cs" />
     <Compile Include="NotifyPropertyChangesModuleTests.cs" />
