--- a/src/Archetype/Archetype.csproj
+++ b/src/Archetype/Archetype.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="DelegatingPrototype.cs" />
     <Compile Include="IPrototypalMetaObjectProvider.cs" />
+    <Compile Include="NotifyPropertyChangedModule.cs" />
     <Compile Include="PrototypalMetaObject.cs" />
     <Compile Include="PrototypalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
