--- a/src/Archetype/Archetype.csproj
+++ b/src/Archetype/Archetype.csproj
@@ -35,7 +35,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DelegatingPrototype.cs" />
+    <Compile Include="DelegatingObject.cs" />
     <Compile Include="NotifyPropertyChangedModule.cs" />
     <Compile Include="DynamicModuleMetaObject.cs" />
     <Compile Include="PrototypalObject.cs" />
