Moving PrototypalObject into a sandbox until it is fully flushed out. Replacing tests that use it to instead use the base DelegatingObject.

--- a/src/Archetype/Archetype.csproj
+++ b/src/Archetype/Archetype.csproj
@@ -38,7 +38,7 @@
     <Compile Include="DelegatingObject.cs" />
     <Compile Include="NotifyPropertyChangedModule.cs" />
     <Compile Include="DynamicModuleMetaObject.cs" />
-    <Compile Include="PrototypalObject.cs" />
+    <Compile Include="Sandbox\PrototypalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
