--- a/src/Archetype.Tests/Archetype.Tests.csproj
+++ b/src/Archetype.Tests/Archetype.Tests.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Folder Include="OverrideTests\" />
     <Folder Include="PropertyTests\" />
+    <Folder Include="Sandbox\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
