Renaming test classes.

--- a/src/Archetype.Tests/Archetype.Tests.csproj
+++ b/src/Archetype.Tests/Archetype.Tests.csproj
@@ -43,19 +43,19 @@
     <Compile Include="Constants.cs" />
     <Compile Include="ModuleTestsForGetMember.cs" />
     <Compile Include="NotifyPropertyChangesModuleTests.cs" />
-    <Compile Include="PrototypalObjectTestsExpandoObjectPrototypes.cs" />
-    <Compile Include="PrototypalObjectTestsInheritanceOrder.cs" />
-    <Compile Include="StaticTests\StaticMethodTests.cs" />
-    <Compile Include="StaticTests\StaticMethodsOnDynamicObjectPrototypeTests.cs" />
-    <Compile Include="StaticTests\StaticMethodsOnObjectPrototypeTests.cs" />
+    <Compile Include="DelegatingObjectTestsExpandoObjectModules.cs" />
+    <Compile Include="DelegatingObjectTestsInheritanceOrder.cs" />
+    <Compile Include="StaticTests\DelegatingObjectTestsDefinedStaticMethods.cs" />
+    <Compile Include="StaticTests\DelegatingObjectTestsDefinedStaticMethodsOnDynamicObjectModule.cs" />
+    <Compile Include="StaticTests\DelegatingObjectTestsDefinedStaticMethodsOnObjectModule.cs" />
     <Compile Include="TestObjects\DynamicObjectWithMethods.cs" />
     <Compile Include="TestObjects\Person.cs" />
     <Compile Include="TestObjects\ProtoTypalObjectWithMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PrototypalObjectTests.cs" />
-    <Compile Include="MethodTests\PrototypalObjectTestsDefinedMethods.cs" />
+    <Compile Include="DelegatingObjectTests.cs" />
+    <Compile Include="MethodTests\DelegatingObjectTestsDefinedMethods.cs" />
     <Compile Include="MethodTests\NestedPrototypeWithMethods.cs" />
-    <Compile Include="PrototypalObjectTestsNotImplementedCalls.cs" />
+    <Compile Include="DelegatingObjectTestsNotImplementedCalls.cs" />
     <Compile Include="TestObjects\ObjectWithMethods.cs" />
   </ItemGroup>
   <ItemGroup>
