--- a/src/Archetype/Archetype.csproj
+++ b/src/Archetype/Archetype.csproj
@@ -36,9 +36,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DelegatingObject.cs" />
-    <Compile Include="NotifyPropertyChangedModule.cs" />
+    <Compile Include="Modules\NotifyPropertyChangedModule.cs" />
     <Compile Include="DynamicModuleMetaObject.cs" />
-    <Compile Include="NotifyPropertyChangingModule.cs" />
+    <Compile Include="Modules\NotifyPropertyChangingModule.cs" />
     <Compile Include="Sandbox\PrototypalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
